Fixing alignment issues with the booking page
changed the margins to make it work better

--- a/-/css/style_bookings.css
+++ b/-/css/style_bookings.css
@@ -883,14 +883,16 @@ div.booking__content p {
 	/*margin-left: auto;*/
 	/*margin-right: auto;*/
 
-	margin-left: 160px;
+	margin-left: 16%;
 	margin-right: 30px;
+	text-align: left;
+	float:left;
 	/*max-width: 1000px*/
 }
 div.booking__headline {
 	float: left;
-	margin-left: 160px;
-	margin-right: 160px;
+	margin-left: 15%;
+	margin-right: 15%;
 	margin-top: 60px;
 	position: relative;
 	text-align: left;
